--- a/.gitignore
+++ b/.gitignore
@@ -388,7 +388,7 @@ Temporary Items
 .ionide
 
 # Support for Project snippet scope
-.vscode/*.code-snippets
+# .vscode/*.code-snippets
 
 # Ignore code-workspaces
 *.code-workspace
