--- a/.github/workflows/latex.yaml
+++ b/.github/workflows/latex.yaml
@@ -7,10 +7,12 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v2
 
+      - run: mkdir -p ./dist
+
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          args: "-g -xelatex -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape -auxdir=./dist outdir=./dist"
+          args: "-g -xelatex -file-line-error -halt-on-error -interaction=nonstopmode -auxdir=./dist outdir=./dist -shell-escape"
           working_directory: ./
           latexmk_use_xelatex: true
           latexmk_shell_escape: true
