--- a/.github/workflows/latex.yaml
+++ b/.github/workflows/latex.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          args: "-g -xelatex -file-line-error -halt-on-error -interaction=nonstopmode -auxdir=./dist outdir=./dist -shell-escape"
+          args: "-g -xelatex -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape"
           working_directory: ./
           latexmk_use_xelatex: true
           latexmk_shell_escape: true
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: PDF
-          path: ./dist/document.pdf
+          path: document.pdf
