--- a/.github/workflows/latex.yaml
+++ b/.github/workflows/latex.yaml
@@ -12,9 +12,8 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          args: "-g -xelatex -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape"
+          args: "-g -lualatex -file-line-error -halt-on-error -interaction=nonstopmode -shell-escape"
           working_directory: ./
-          latexmk_use_xelatex: true
           latexmk_shell_escape: true
           extra_fonts: |
             ./fonts/*.ttf
